// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointment details should hide comment section when there is no comment to display 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppointmentDetails
    appointmentTypeDescription="ACT"
    comments=""
    endTime=""
    locationDescription="GYM"
    recurring={false}
    repeats=""
    startTime="2019-10-10T:21:0:00Z"
    times=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <UNDEFINED>
          <strong>
            Appointment type
          </strong>
          <UNDEFINED>
            ACT
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Appointment location
          </strong>
          <UNDEFINED>
            GYM
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Date and time 
          </strong>
          <UNDEFINED>
            <div>
              Thursday
            </div>
            10/10/2019 - 21:00
             
            
          </UNDEFINED>
        </UNDEFINED>,
        "",
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Appointment type
            </strong>,
            <UNDEFINED>
              ACT
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment type",
            },
            "ref": null,
            "rendered": "Appointment type",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "ACT",
            },
            "ref": null,
            "rendered": "ACT",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Appointment location
            </strong>,
            <UNDEFINED>
              GYM
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment location",
            },
            "ref": null,
            "rendered": "Appointment location",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "GYM",
            },
            "ref": null,
            "rendered": "GYM",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Date and time 
            </strong>,
            <UNDEFINED>
              <div>
                Thursday
              </div>
              10/10/2019 - 21:00
               
              
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date and time ",
            },
            "ref": null,
            "rendered": "Date and time ",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <div>
                  Thursday
                </div>,
                "10/10/2019 - 21:00",
                " ",
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Thursday",
                },
                "ref": null,
                "rendered": "Thursday",
                "type": "div",
              },
              "10/10/2019 - 21:00",
              " ",
              "",
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      "",
      false,
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": true,
        "rules": Array [
          "
  display: flex;
  flex-direction: row;

  div {
    margin-right: ",
          "20px",
          ";
  }

  @media (max-width: ",
          "641px",
          ") {
    flex-direction: column;
    div {
      margin-bottom: ",
          "10px",
          ";
      margin-right: 0;
    }
  }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <UNDEFINED>
            <strong>
              Appointment type
            </strong>
            <UNDEFINED>
              ACT
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Appointment location
            </strong>
            <UNDEFINED>
              GYM
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Date and time 
            </strong>
            <UNDEFINED>
              <div>
                Thursday
              </div>
              10/10/2019 - 21:00
               
              
            </UNDEFINED>
          </UNDEFINED>,
          "",
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Appointment type
              </strong>,
              <UNDEFINED>
                ACT
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment type",
              },
              "ref": null,
              "rendered": "Appointment type",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "ACT",
              },
              "ref": null,
              "rendered": "ACT",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Appointment location
              </strong>,
              <UNDEFINED>
                GYM
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment location",
              },
              "ref": null,
              "rendered": "Appointment location",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "GYM",
              },
              "ref": null,
              "rendered": "GYM",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Date and time 
              </strong>,
              <UNDEFINED>
                <div>
                  Thursday
                </div>
                10/10/2019 - 21:00
                 
                
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Date and time ",
              },
              "ref": null,
              "rendered": "Date and time ",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <div>
                    Thursday
                  </div>,
                  "10/10/2019 - 21:00",
                  " ",
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thursday",
                  },
                  "ref": null,
                  "rendered": "Thursday",
                  "type": "div",
                },
                "10/10/2019 - 21:00",
                " ",
                "",
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        "",
        false,
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": true,
          "rules": Array [
            "
  display: flex;
  flex-direction: row;

  div {
    margin-right: ",
            "20px",
            ";
  }

  @media (max-width: ",
            "641px",
            ") {
    flex-direction: column;
    div {
      margin-bottom: ",
            "10px",
            ";
      margin-right: 0;
    }
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Appointment details should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppointmentDetails
    appointmentTypeDescription="ACT"
    comments="test"
    endTime=""
    locationDescription="GYM"
    recurring={true}
    repeats="DAILY"
    startTime="2019-03-20T:21:0:00Z"
    times="5"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <UNDEFINED>
          <strong>
            Appointment type
          </strong>
          <UNDEFINED>
            ACT
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Appointment location
          </strong>
          <UNDEFINED>
            GYM
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Date and time 
          </strong>
          <UNDEFINED>
            <div>
              Wednesday
            </div>
            20/03/2019 - 21:00
             
            
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Comments
          </strong>
          <UNDEFINED>
            test
          </UNDEFINED>
        </UNDEFINED>,
        <UNDEFINED>
          <strong>
            Recurring
          </strong>
          <UNDEFINED>
            Daily
            , 
            5
             occurrences
          </UNDEFINED>
          <UNDEFINED>
            Ends 
            Sunday, March 24th 2019
          </UNDEFINED>
        </UNDEFINED>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Appointment type
            </strong>,
            <UNDEFINED>
              ACT
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment type",
            },
            "ref": null,
            "rendered": "Appointment type",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "ACT",
            },
            "ref": null,
            "rendered": "ACT",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Appointment location
            </strong>,
            <UNDEFINED>
              GYM
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment location",
            },
            "ref": null,
            "rendered": "Appointment location",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "GYM",
            },
            "ref": null,
            "rendered": "GYM",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Date and time 
            </strong>,
            <UNDEFINED>
              <div>
                Wednesday
              </div>
              20/03/2019 - 21:00
               
              
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date and time ",
            },
            "ref": null,
            "rendered": "Date and time ",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <div>
                  Wednesday
                </div>,
                "20/03/2019 - 21:00",
                " ",
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Wednesday",
                },
                "ref": null,
                "rendered": "Wednesday",
                "type": "div",
              },
              "20/03/2019 - 21:00",
              " ",
              "",
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Comments
            </strong>,
            <UNDEFINED>
              test
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Comments",
            },
            "ref": null,
            "rendered": "Comments",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
            },
            "ref": null,
            "rendered": "test",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <strong>
              Recurring
            </strong>,
            <UNDEFINED>
              Daily
              , 
              5
               occurrences
            </UNDEFINED>,
            <UNDEFINED>
              Ends 
              Sunday, March 24th 2019
            </UNDEFINED>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Recurring",
            },
            "ref": null,
            "rendered": "Recurring",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Daily",
                ", ",
                "5",
                " occurrences",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Daily",
              ", ",
              "5",
              " occurrences",
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Ends ",
                "Sunday, March 24th 2019",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Ends ",
              "Sunday, March 24th 2019",
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": true,
                "rules": Array [
                  "
  margin-top: ",
                  "5px",
                  ";
  @media (max-width: ",
                  "641px",
                  ") {
    font-size: ",
                  "16px",
                  ";
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "rules": Array [
              "
  @media (max-width: ",
              "641px",
              ") {
    margin-right: ",
              "5px",
              ";

    strong {
      font-size: ",
              "16px",
              ";
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": true,
        "rules": Array [
          "
  display: flex;
  flex-direction: row;

  div {
    margin-right: ",
          "20px",
          ";
  }

  @media (max-width: ",
          "641px",
          ") {
    flex-direction: column;
    div {
      margin-bottom: ",
          "10px",
          ";
      margin-right: 0;
    }
  }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <UNDEFINED>
            <strong>
              Appointment type
            </strong>
            <UNDEFINED>
              ACT
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Appointment location
            </strong>
            <UNDEFINED>
              GYM
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Date and time 
            </strong>
            <UNDEFINED>
              <div>
                Wednesday
              </div>
              20/03/2019 - 21:00
               
              
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Comments
            </strong>
            <UNDEFINED>
              test
            </UNDEFINED>
          </UNDEFINED>,
          <UNDEFINED>
            <strong>
              Recurring
            </strong>
            <UNDEFINED>
              Daily
              , 
              5
               occurrences
            </UNDEFINED>
            <UNDEFINED>
              Ends 
              Sunday, March 24th 2019
            </UNDEFINED>
          </UNDEFINED>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Appointment type
              </strong>,
              <UNDEFINED>
                ACT
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment type",
              },
              "ref": null,
              "rendered": "Appointment type",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "ACT",
              },
              "ref": null,
              "rendered": "ACT",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Appointment location
              </strong>,
              <UNDEFINED>
                GYM
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment location",
              },
              "ref": null,
              "rendered": "Appointment location",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "GYM",
              },
              "ref": null,
              "rendered": "GYM",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Date and time 
              </strong>,
              <UNDEFINED>
                <div>
                  Wednesday
                </div>
                20/03/2019 - 21:00
                 
                
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Date and time ",
              },
              "ref": null,
              "rendered": "Date and time ",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <div>
                    Wednesday
                  </div>,
                  "20/03/2019 - 21:00",
                  " ",
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Wednesday",
                  },
                  "ref": null,
                  "rendered": "Wednesday",
                  "type": "div",
                },
                "20/03/2019 - 21:00",
                " ",
                "",
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Comments
              </strong>,
              <UNDEFINED>
                test
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Comments",
              },
              "ref": null,
              "rendered": "Comments",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "test",
              },
              "ref": null,
              "rendered": "test",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <strong>
                Recurring
              </strong>,
              <UNDEFINED>
                Daily
                , 
                5
                 occurrences
              </UNDEFINED>,
              <UNDEFINED>
                Ends 
                Sunday, March 24th 2019
              </UNDEFINED>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Recurring",
              },
              "ref": null,
              "rendered": "Recurring",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  "Daily",
                  ", ",
                  "5",
                  " occurrences",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Daily",
                ", ",
                "5",
                " occurrences",
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  "Ends ",
                  "Sunday, March 24th 2019",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Ends ",
                "Sunday, March 24th 2019",
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-htpNat",
                  "isStatic": true,
                  "rules": Array [
                    "
  margin-top: ",
                    "5px",
                    ";
  @media (max-width: ",
                    "641px",
                    ") {
    font-size: ",
                    "16px",
                    ";
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-htpNat",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": true,
              "rules": Array [
                "
  @media (max-width: ",
                "641px",
                ") {
    margin-right: ",
                "5px",
                ";

    strong {
      font-size: ",
                "16px",
                ";
    }
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": true,
          "rules": Array [
            "
  display: flex;
  flex-direction: row;

  div {
    margin-right: ",
            "20px",
            ";
  }

  @media (max-width: ",
            "641px",
            ") {
    flex-direction: column;
    div {
      margin-bottom: ",
            "10px",
            ";
      margin-right: 0;
    }
  }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
